--- a/style.css
+++ b/style.css
@@ -1055,8 +1055,7 @@ button:disabled {
   font-size: 20px;
 }
 #setupDiagram .conn {
-  stroke: var(--control-text);
-  stroke-width: 1px;
+  stroke: none;
 }
 #setupDiagram .conn.red { fill: var(--power-color); }
 #setupDiagram .conn.blue { fill: var(--video-color); }
