--- a/overview-print.css
+++ b/overview-print.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;700&display=swap');
 
+button:focus,
+select:focus,
+button:focus-visible,
+select:focus-visible {
+  outline: none;
+}
+
 @page {
   size: A4;
   margin: 1cm;
