--- a/overview-print.css
+++ b/overview-print.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;600;700&display=swap');
 
 @page {
   size: A4;
@@ -69,7 +69,7 @@ body.dark-mode {
 #overviewDialogContent h2,
 #overviewDialogContent h3 {
   font-family: 'Ubuntu', sans-serif;
-  font-weight: 700;
+  font-weight: 600;
   border-color: var(--text-color) !important;
 }
 
