--- a/overview-print.css
+++ b/overview-print.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;600;700&display=swap');
+@import url('fonts.css');
 
 button:focus,
 select:focus,
