--- a/style.css
+++ b/style.css
@@ -442,7 +442,7 @@ textarea {
   font-size: 1em;
   background-color: var(--control-bg);
   color: var(--control-text);
-  border: 1px solid var(--control-border);
+  border: none;
   border-radius: var(--border-radius);
 }
 
@@ -530,7 +530,7 @@ section:hover {
 button {
   background-color: var(--control-bg);
   color: var(--control-text);
-  border: 1px solid var(--control-border);
+  border: none;
   border-radius: var(--border-radius);
   padding: 5px 10px; /* Adjusted padding to make buttons smaller */
   margin: 5px;
@@ -539,21 +539,18 @@ button {
   transition:
     background-color 0.2s,
     color 0.2s,
-    border-color 0.2s,
     box-shadow 0.2s,
     transform 0.2s;
 }
 button:hover {
   background-color: var(--accent-color);
   color: var(--inverse-text-color);
-  border-color: var(--accent-color);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   transform: translateY(-2px);
 }
 button:active {
   background-color: var(--accent-color);
   color: var(--inverse-text-color);
-  border-color: var(--accent-color);
   filter: brightness(0.9);
   transform: translateY(0);
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
@@ -734,7 +731,6 @@ button:disabled {
 #topBar button:active {
   background-color: var(--accent-color);
   color: var(--inverse-text-color);
-  border-color: var(--accent-color);
 }
 
 #helpButton {
