--- a/overview-print.css
+++ b/overview-print.css
@@ -16,6 +16,7 @@ body,
 body.dark-mode {
   --surface-color: #fff;
   --text-color: #000;
+  --button-size: 32px;
   font-family: 'Ubuntu', sans-serif;
   font-weight: 300;
   font-size: 12pt;
@@ -183,6 +184,8 @@ table, th, td {
   background: var(--surface-color) !important;
   color: var(--text-color) !important;
   border: none !important;
+  min-width: var(--button-size) !important;
+  min-height: var(--button-size) !important;
 }
 
 .power-conn {
