--- a/public/styles/fonts.css
+++ b/public/styles/fonts.css
@@ -3,54 +3,54 @@
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url('Ubuntu/Ubuntu-Light.ttf') format('truetype');
+  src: url('../Ubuntu/Ubuntu-Light.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Ubuntu';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('Ubuntu/Ubuntu-Regular.ttf') format('truetype');
+  src: url('../Ubuntu/Ubuntu-Regular.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Ubuntu';
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url('Ubuntu/Ubuntu-Medium.ttf') format('truetype');
+  src: url('../Ubuntu/Ubuntu-Medium.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Ubuntu';
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url('Ubuntu/Ubuntu-Bold.ttf') format('truetype');
+  src: url('../Ubuntu/Ubuntu-Bold.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Ubuntu';
   font-style: italic;
   font-weight: 300;
   font-display: swap;
-  src: url('Ubuntu/Ubuntu-LightItalic.ttf') format('truetype');
+  src: url('../Ubuntu/Ubuntu-LightItalic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Ubuntu';
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url('Ubuntu/Ubuntu-Italic.ttf') format('truetype');
+  src: url('../Ubuntu/Ubuntu-Italic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Ubuntu';
   font-style: italic;
   font-weight: 500;
   font-display: swap;
-  src: url('Ubuntu/Ubuntu-MediumItalic.ttf') format('truetype');
+  src: url('../Ubuntu/Ubuntu-MediumItalic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Ubuntu';
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url('Ubuntu/Ubuntu-BoldItalic.ttf') format('truetype');
+  src: url('../Ubuntu/Ubuntu-BoldItalic.ttf') format('truetype');
 }
