--- a/style.css
+++ b/style.css
@@ -1976,16 +1976,32 @@ body.dark-mode.pink-mode .help-content { border-color: var(--accent-color); }
   list-style: none;
   padding: 0;
   margin: 0;
+  border-top: 1px solid var(--accent-color);
+  border-bottom: 1px solid var(--accent-color);
 }
 
 #sideMenu li {
-  margin-bottom: 10px;
+  margin: 0;
+}
+
+#sideMenu li + li {
+  border-top: 1px solid var(--accent-color);
 }
 
 #sideMenu a {
   color: var(--text-color);
   text-decoration: none;
   font-size: 1.1em;
+  display: block;
+  padding: 10px 0;
+}
+
+.dark-mode #sideMenu ul {
+  border-color: var(--inverse-text-color);
+}
+
+.dark-mode #sideMenu li + li {
+  border-color: var(--inverse-text-color);
 }
 
 #menuOverlay {
