--- a/style.css
+++ b/style.css
@@ -1513,6 +1513,15 @@ body.dark-mode.pink-mode .help-content { border-color: var(--accent-color); }
     border-bottom: 1px solid var(--inverse-text-color);
     color: var(--inverse-text-color);
   }
+  body:not(.light-mode).pink-mode .gear-table td {
+    border-top: 1px solid var(--accent-color);
+    border-bottom: 1px solid var(--accent-color);
+  }
+  body:not(.light-mode).pink-mode .gear-table .category-row td {
+    border-top: 1px solid var(--accent-color);
+    border-bottom: 1px solid var(--accent-color);
+    color: var(--accent-color);
+  }
   body:not(.light-mode).pink-mode .help-content { border-color: var(--accent-color); }
 }
 
@@ -1859,6 +1868,17 @@ body.pink-mode:not(.light-mode) #userFeedbackTable th {
   color: var(--inverse-text-color);
 }
 
+.dark-mode.pink-mode .gear-table td {
+  border-top: 1px solid var(--accent-color);
+  border-bottom: 1px solid var(--accent-color);
+}
+
+.dark-mode.pink-mode .gear-table .category-row td {
+  border-top: 1px solid var(--accent-color);
+  border-bottom: 1px solid var(--accent-color);
+  color: var(--accent-color);
+}
+
 #overviewDialogContent .gear-table td {
   padding: 4px 0;
   border-left: none;
@@ -1885,6 +1905,17 @@ body.pink-mode:not(.light-mode) #userFeedbackTable th {
   border-top: 1px solid var(--inverse-text-color);
   border-bottom: 1px solid var(--inverse-text-color);
   color: var(--inverse-text-color);
+}
+
+#overviewDialogContent.dark-mode.pink-mode .gear-table td {
+  border-top: 1px solid var(--accent-color);
+  border-bottom: 1px solid var(--accent-color);
+}
+
+#overviewDialogContent.dark-mode.pink-mode .gear-table .category-row td {
+  border-top: 1px solid var(--accent-color);
+  border-bottom: 1px solid var(--accent-color);
+  color: var(--accent-color);
 }
 
 #gearListOutput,
