--- a/style.css
+++ b/style.css
@@ -453,7 +453,7 @@ body.hover-help-active * {
 /* Wrapper for selects to allow flexible layout */
 .select-wrapper {
   display: flex;
-  flex-direction: column;
+  align-items: center;
   flex: 1;
   min-width: 0; /* allow wrapper to shrink on narrow screens */
   position: relative;
@@ -461,7 +461,8 @@ body.hover-help-active * {
 
 /* Prevent long option text from widening selects on mobile */
 .select-wrapper select {
-  width: 100%;
+  flex: 1;
+  width: auto;
   max-width: 100%;
 }
 
