Hide overview title and favorite buttons in print

--- a/overview-print.css
+++ b/overview-print.css
@@ -96,8 +96,7 @@ body.dark-mode {
 }
 
 h1 {
-  text-align: center;
-  margin-bottom: 0.5em;
+  display: none;
 }
 
 p {
@@ -106,7 +105,8 @@ p {
 
 #topBar,
 .print-btn,
-.back-btn {
+.back-btn,
+.favorite-toggle {
   display: none;
 }
 
